feat: remove list-style do popup da notificação e aumenta padding

--- a/backend/public/styles.css
+++ b/backend/public/styles.css
@@ -553,7 +553,8 @@ body[data-language="en"] .lang-en {
 }
 
 .notification {
-    padding: 15px;
+    list-style: none;
+    padding: 2rem;
     margin-bottom: 20px;
     border-radius: 4px;
     display: none;
